# ocurrent-doc

./: .gitignore  README.md  dune-project  ocurrent-doc.opam
docs/: index.html  styles.css
docs/build-a-website-deployer-with-ocurrent/: index.html
docs/build-a-website-deployer-with-ocurrent/a-gatsby-site-deployer/: index.html
docs/create-an-ocurrent-plugin/: index.html
docs/create-an-ocurrent-plugin/basic-ocurrent-primitives/: index.html
docs/create-an-ocurrent-plugin/build-a-gitlab-ocurrent-plugin/: index.html
docs/img/: ocluster.txt
docs/introduction-to-incrementalism-in-ocurrent/: index.html
docs/introduction-to-incrementalism-in-ocurrent/a-high-level-interface/: index.html
docs/introduction-to-incrementalism-in-ocurrent/the-domain-specific-language/: index.html
docs/introduction-to-incrementalism-in-ocurrent/using-plugins/: index.html
docs/obuilder/: index.html
docs/obuilder/platform-agnostic-build-environments/: index.html
docs/ocluster/: index.html
docs/ocluster/a-scheduler,-some-workers-and-a-client/: index.html
docs/ocluster/capabilities-and-protocols-or-something/: index.html
src/: index.md
src/1-section/: index.md
src/1-section/a-high-level-interface/: index.md
src/1-section/the-domain-specific-language/: index.md
src/1-section/using-plugins/: index.md
src/2-section/: index.md
src/2-section/a-gatsby-site-deployer/: index.md
src/3-section/: index.md
src/3-section/basic-ocurrent-primitives/: dune  index.md
src/3-section/build-a-gitlab-ocurrent-plugin/: index.md
src/4-section/: index.md
src/5-section/: index.md
(+13 files in other folders)
